# XSmallHMIScada

./: CMakeLists.txt  LICENSE  README.md  VisualObject.h  objects.json
include/: Button.h  Configloader.h  Constants.h  HistoryGraph.h  HmiPlayer.h  Image.h  InputField.h  JSONSceneLoader.h  Line.h  Polyline.h  Rectangle.h  SceneFactory.h  StateManager.h  Text.h  VariableDatabase.h  VisualObject.h  logger.h  resources.h
src/: Button.cpp  HistoryGraph.cpp  HmiPlayer.cpp  Image.cpp  InputField.cpp  JSONSceneLoader.cpp  Line.cpp  Polyline.cpp  Rectangle.cpp  SceneFactory.cpp  Text.cpp  VariableDatabase.cpp  VisualObject.cpp  main.cpp
tests/: CMakeLists.txt  README.md  test_scene_factory.cpp  test_variable_database.cpp  test_visual_objects.cpp
